--- a/package.json
+++ b/package.json
@@ -34,5 +34,9 @@
     "sass-loader": "6.0.6",
     "style-loader": "0.19.1",
     "webpack": "2.7.0"
+  },
+  "dependencies": {
+    "deeplearn": "^0.5.1",
+    "deeplearn-knn-image-classifier": "^0.3.0"
   }
 }
