--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Using AI to detect dangerous exercise postures",
   "main": "index.js",
   "scripts": {
+    "start": "./node_modules/webpack/bin/webpack.js --config webpack.config.js -p && open ./public/index.html",
     "bundle:dev": "./node_modules/webpack/bin/webpack.js --config webpack.config.js",
     "bundle:prod": "./node_modules/webpack/bin/webpack.js --config webpack.config.js -p",
     "test": "echo \"Error: no test specified\" && exit 1"
